--- a/chat-page.html
+++ b/chat-page.html
@@ -9,7 +9,7 @@
 <body>
 	<div class="chat-container">
 	  <div class="chat">
-		<a href="home-page.html" class="back-text">Back</a>
+		<a href="index.html" class="back-text">Back</a>
 		<div class="chat-history" id="chatHistory"></div>
 	  </div>
 	  <div class="input-container">
@@ -32,7 +32,7 @@
         const sessionId = Date.now().toString();
 		
 		function goToHomePage() {
-			window.location.href = "home-page.html";
+			window.location.href = "index.html";
 			}
 		
 		async function getTtsUrl(text) {
